Change password form, back button

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/menu/ChangePasswordForm.java=UTF-8
 encoding//src/menu/Info.java=UTF-8
 encoding//src/menu/LoginForm.java=UTF-8
 encoding//src/menu/Menu.java=UTF-8
